fixtures/cascading/invalid/02-path-not-found-in-sub/.anatomy
anatomy_version = "0.2"
tagline = "valid root"

[identity]
fingerprint = "jtambpg4nhfyp3jw56eh"

[identity.stack]
id = "typescript"
hash = "jtamb"

[identity.form]
id = "cli-tool"
hash = "pg4nh"

[identity.domain]
id = "developer-tools"
hash = "fyp3j"

[identity.function]
id = "demo-root-2"
hash = "w56eh"

[generated]
at = 2026-05-06T12:00:00.000Z
by = "test"
model = "none"
schema = "https://anatomy.dev/spec/0.2/schema.json"
